# code-sherpa

./: 3  Cargo.toml  rustfmt.toml
qdrant_storage/: raft_state.json
src/: error.rs  main.rs  prelude.rs
src/chunking/: chunker.rs  mod.rs  preprocess.rs  splitter.rs  types.rs
src/commands/: mod.rs  query.rs  scan.rs
src/embedding/: client.rs  huggingface.rs  mod.rs  ollama.rs  openai.rs
src/scanner/: mod.rs  results.rs  scanner.rs
src/storage/: client.rs  mod.rs  qdrant.rs
src/utils/: mod.rs  parsers.rs
