[package]
name = "code-sherpa"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.32", features = ["derive", "env"] }
gix = "0.70.0"
huggingface = "0.1.0"
indicatif = "0.17.11"
itertools = "0.14.0"
ollama-rs = "0.2.6"
openai = "1.0.0"
qdrant = "0.0.0"
qdrant-client = { version = "1.13.0" }
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["alloc", "derive", "serde_derive"] }
serde_json = "1.0.140"
serde_plain = "1.0.2"
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full", "tracing"] }
tracing = "0.1.41"
tracing-indicatif = "0.3.9"
tracing-subscriber = "0.3.19"
tree-sitter = "0.25.3"
tree-sitter-go = "0.23.4"
tree-sitter-javascript = "0.23.1"
tree-sitter-markdown = "0.7.1"
tree-sitter-python = "0.23.6"
tree-sitter-rust = "0.23.2"
tree-sitter-toml = "0.20.0"
tree-sitter-typescript = "0.23.2"
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
walkdir = "2.5.0"
